--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
         <option value="8">Angry 😡</option>
       </select><br>
 
-      <label>React Limit:</label>
-      <input type="number" id="limit" value="1" min="1" max="50"><br>
+      <label>React Limit (max 100):</label>
+      <input type="number" id="limit" value="1" min="1" max="100"><br>
 
       <button type="submit">Start Boost</button>
     </form>
@@ -40,8 +40,8 @@
     document.getElementById("boostForm").addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      const appstate = document.getElementById("appstate").value;
-      const postLink = document.getElementById("postLink").value;
+      const appstate = document.getElementById("appstate").value.trim();
+      const postLink = document.getElementById("postLink").value.trim();
       const reactionType = document.getElementById("reactionType").value;
       const limit = document.getElementById("limit").value;
 
