--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,110 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FB ReactBoost</title>
-  <link rel="stylesheet" href="style.css">
+  <title>⚡ ReactBoost ⚡</title>
+  <style>
+    * {margin:0; padding:0; box-sizing:border-box; font-family:"Consolas", monospace;}
+    body {
+      height:100vh;
+      background: radial-gradient(circle at top left, #0f0c29, #302b63, #24243e);
+      display:flex; justify-content:center; align-items:center;
+      color:#fff; overflow:hidden;
+    }
+
+    .card {
+      background: rgba(20,20,20,0.8);
+      border: 2px solid #ff00ff;
+      border-radius: 14px;
+      padding: 25px;
+      width: 440px;
+      box-shadow: 0 0 20px #ff00ff, 0 0 40px #00f0ff;
+      animation: pulse 3s infinite alternate;
+    }
+
+    @keyframes pulse {
+      from { box-shadow: 0 0 15px #ff00ff, 0 0 30px #00f0ff; }
+      to { box-shadow: 0 0 30px #00f0ff, 0 0 60px #ff00ff; }
+    }
+
+    h2 {
+      text-align:center;
+      font-size:26px;
+      color:#00f0ff;
+      margin-bottom:20px;
+      letter-spacing:2px;
+      text-shadow:0 0 10px #00f0ff,0 0 20px #ff00ff;
+      overflow:hidden;
+      white-space:nowrap;
+      border-right: 3px solid #00f0ff;
+      width: 0;
+      animation: typing 3s steps(30,end) forwards, blink 0.7s infinite;
+    }
+    @keyframes typing { from{width:0;} to{width:100%;} }
+    @keyframes blink { 50%{border-color:transparent;} }
+
+    label {font-size:13px; margin:6px 0; display:block; color:#ff66ff;}
+    input,textarea,select {
+      width:100%; padding:10px; margin-bottom:14px;
+      border:none; border-radius:8px;
+      background:rgba(255,255,255,0.1);
+      color:#fff; outline:none; font-size:14px;
+      box-shadow: inset 0 0 8px #00f0ff;
+    }
+    textarea {resize:vertical;}
+
+    button {
+      width:100%; padding:12px;
+      border:none; border-radius:8px;
+      background:linear-gradient(90deg,#ff00ff,#00f0ff);
+      color:#fff; font-weight:bold; cursor:pointer;
+      font-size:16px; text-shadow:0 0 6px #000;
+      transition:0.3s; letter-spacing:1px;
+    }
+    button:hover { transform:scale(1.05); box-shadow:0 0 20px #ff00ff,0 0 30px #00f0ff; }
+
+    .result-box {
+      margin-top:16px; padding:10px;
+      border-radius:8px; font-weight:bold;
+      text-align:center; font-size:14px;
+      transition:all 0.4s ease;
+    }
+    .success { background:rgba(0,255,100,0.1); border:1px solid #00ff9d; color:#00ffcc; }
+    .error { background:rgba(255,0,60,0.1); border:1px solid #ff0040; color:#ff66aa; }
+    .pending { background:rgba(255,255,0,0.1); border:1px solid #ffff66; color:#ffff99; }
+
+    .progress-bar {
+      margin-top:12px;
+      background:rgba(255,255,255,0.1);
+      border-radius:6px; overflow:hidden;
+      height:14px; box-shadow:inset 0 0 10px #000;
+    }
+    .progress {
+      height:100%; width:0%;
+      background:linear-gradient(90deg,#ff00ff,#00f0ff);
+      transition:width 0.25s ease;
+    }
+
+    .counter {
+      margin-top:8px; text-align:center;
+      font-size:13px; color:#ccc;
+    }
+
+    .footer {
+      text-align:center; font-size:12px; margin-top:12px;
+      color:#666; font-style:italic;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Facebook ReactBoost</h2>
+  <div class="card">
+    <h2>ReactBoost</h2>
 
     <form id="boostForm">
       <label>Paste Appstate JSON:</label>
-      <textarea id="appstate" rows="8" placeholder='YOUR APPSTATE HERE...' required></textarea><br>
+      <textarea id="appstate" rows="6" placeholder='YOUR APPSTATE HERE...' required></textarea>
 
       <label>Post Link / ID:</label>
-      <input type="text" id="postLink" placeholder="https://facebook.com/... or ID" required><br>
+      <input type="text" id="postLink" placeholder="https://facebook.com/... or ID" required>
 
       <label>Reaction Type:</label>
       <select id="reactionType">
@@ -25,15 +116,19 @@
         <option value="3">Wow 😮</option>
         <option value="7">Sad 😢</option>
         <option value="8">Angry 😡</option>
-      </select><br>
+      </select>
 
       <label>React Limit (max 100):</label>
-      <input type="number" id="limit" value="1" min="1" max="100"><br>
+      <input type="number" id="limit" value="1" min="1" max="100">
 
-      <button type="submit">Start Boost</button>
+      <button type="submit">🚀 INITIATE BOOST</button>
     </form>
 
-    <div id="result"></div>
+    <div id="result" class="result-box"></div>
+    <div class="progress-bar"><div id="progress" class="progress"></div></div>
+    <div id="counter" class="counter"></div>
+
+    <div class="footer">THANK YOU TO USE MY PROJECT 💗</div>
   </div>
 
   <script>
@@ -43,16 +138,54 @@
       const appstate = document.getElementById("appstate").value.trim();
       const postLink = document.getElementById("postLink").value.trim();
       const reactionType = document.getElementById("reactionType").value;
-      const limit = document.getElementById("limit").value;
+      const limit = parseInt(document.getElementById("limit").value);
 
-      const res = await fetch("/boost", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ appstate, postLink, reactionType, limit })
-      });
+      const resultBox = document.getElementById("result");
+      const progressBar = document.getElementById("progress");
+      const counter = document.getElementById("counter");
 
-      const data = await res.json();
-      document.getElementById("result").textContent = data.message;
+      resultBox.textContent = "⏳ Initializing boost...";
+      resultBox.className = "result-box pending";
+      progressBar.style.width = "0%";
+      counter.textContent = "";
+
+      try {
+        // simulate live progress (fake for UI demo)
+        let current = 0;
+        let interval = setInterval(() => {
+          current++;
+          const percent = Math.min((current/limit)*100,100);
+          progressBar.style.width = percent + "%";
+          counter.textContent = `Reacted ${current} / ${limit}`;
+
+          if(current >= limit){
+            clearInterval(interval);
+            resultBox.textContent = "✅ Boost completed!";
+            resultBox.className = "result-box success";
+          }
+        }, 150); 
+
+        const res = await fetch("/boost", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ appstate, postLink, reactionType, limit })
+        });
+
+        const data = await res.json();
+        if(!res.ok){
+          clearInterval(interval);
+          resultBox.textContent = data.message || "❌ Failed!";
+          resultBox.className = "result-box error";
+          progressBar.style.width = "0%";
+          counter.textContent = "";
+        }
+
+      } catch (err) {
+        resultBox.textContent = "❌ Network error or server not running.";
+        resultBox.className = "result-box error";
+        progressBar.style.width = "0%";
+        counter.textContent = "";
+      }
     });
   </script>
 </body>
